Fixing flicker. Temporarily removed commit messages.

--- a/site/style.css
+++ b/site/style.css
@@ -4,8 +4,6 @@ body {
   color: #eeeeee;
 }
 
-
-
 #outerContainer {
   position: fixed;
   width: 100%;
@@ -17,8 +15,6 @@ body {
   -webkit-transform-origin: 0px 0px;
   -webkit-transform: scale(1.0);
   -webkit-transition: -webkit-transform 0.5s linear;
-  width: auto;
-  overflow: hidden;
 }
 
 .bucket {
